--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "typescript"
   ],
   "dependencies": {
-    "@kaiseki/gutenberg-hooks": "file:.yalc/@kaiseki/gutenberg-hooks",
+    "@kaiseki/gutenberg-hooks": "0.1.0-alpha1",
     "@kaiseki/gutenberg-styles": "0.1.0-alpha1",
     "@wordpress/api-fetch": "^6.11.0",
     "@wordpress/blob": "^3.15.0",
