--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "fix": "yarn run fix:prettier && yarn run fix:css && yarn run fix:eslint",
     "fix:prettier": "prettier --write \"src/**/*.(ts|tsx)\" --ignore-path .prettierignore",
     "fix:eslint": "eslint --fix src --ext ts --ext tsx",
-    "fix:css": "stylelint \"./src/**/*.{ts,tsx}\" --fix"
+    "fix:css": "stylelint \"./src/**/*.{ts,tsx}\" --fix",
+    "i18n": "yarn gettext-extract && yarn i18n:pot-prep",
+    "i18n:pot-prep": "sed \"-i\" \"\" \"-e\" 's/#: [^:]*/#: gutenberg-components.js/g' languages/gutenberg-components.pot",
+    "prepare": "yarn run build",
+    "prepublishOnly": "yarn run lint",
+    "preversion": "yarn run fix"
   },
   "author": {
     "name": "Kaiseki",
@@ -37,43 +42,44 @@
   "dependencies": {
     "@kaiseki/gutenberg-hooks": "0.1.0-alpha1",
     "@kaiseki/gutenberg-styles": "0.1.0-alpha1",
-    "@wordpress/api-fetch": "^6.11.0",
-    "@wordpress/blob": "^3.15.0",
-    "@wordpress/block-editor": "^9.7.0",
-    "@wordpress/components": "^19.16.0",
-    "@wordpress/compose": "^5.13.0",
-    "@wordpress/core-data": "^4.12.0",
+    "@wordpress/api-fetch": "^6.13.0",
+    "@wordpress/blob": "^3.16.0",
+    "@wordpress/block-editor": "^9.8.0",
+    "@wordpress/components": "^20.0.0",
+    "@wordpress/compose": "^5.14.0",
+    "@wordpress/core-data": "^4.14.0",
     "@wordpress/data": "^6.15.0",
-    "@wordpress/date": "^4.15.0",
-    "@wordpress/editor": "^12.14.0",
-    "@wordpress/element": "^4.13.0",
-    "@wordpress/i18n": "^4.14.0",
-    "@wordpress/icons": "^9.5.0",
-    "@wordpress/media-utils": "^4.6.0",
-    "@wordpress/url": "^3.15.0",
+    "@wordpress/date": "^4.16.0",
+    "@wordpress/editor": "^12.15.0",
+    "@wordpress/element": "^4.14.0",
+    "@wordpress/i18n": "^4.16.0",
+    "@wordpress/icons": "^9.7.0",
+    "@wordpress/media-utils": "^4.7.0",
+    "@wordpress/notices": "^3.16.0",
+    "@wordpress/url": "^3.17.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.34",
+    "moment-timezone": "^0.5.37",
     "react": "^18.2.0",
     "react-select": "^5.4.0",
     "react-select-async-paginate": "^0.6.2",
     "styled-components": "^5.3.5",
-    "type-fest": "^2.18.1"
+    "type-fest": "^2.19.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
+    "@babel/core": "^7.18.13",
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@types/classnames": "^2.3.1",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/styled-components": "^5.1.25",
+    "@types/lodash": "^4.14.184",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/styled-components": "^5.1.26",
     "@types/wordpress__api-fetch": "^3.23.1",
     "@types/wordpress__blob": "^2.8.0",
     "@types/wordpress__block-editor": "^7.0.0",
-    "@types/wordpress__components": "^19.10.1",
+    "@types/wordpress__components": "^19.10.2",
     "@types/wordpress__compose": "^4.0.1",
     "@types/wordpress__core-data": "^2.4.5",
     "@types/wordpress__data": "^6.0.1",
@@ -81,13 +87,14 @@
     "@types/wordpress__editor": "^11.0.0",
     "@types/wordpress__i18n": "^3.11.0",
     "@types/wordpress__media-utils": "^3.0.0",
+    "@types/wordpress__notices": "^3.5.0",
     "@types/wordpress__url": "^2.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "@wwwoda/prettier-config": "^2.0.1",
     "@wwwoda/tsconfig": "^1.2.0",
     "del-cli": "^5.0.0",
-    "eslint": "^8.21.0",
+    "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -96,17 +103,42 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-newline-destructuring": "^1.0.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "gettext-extract": "^2.0.1",
+    "np": "^7.6.2",
     "postcss-scss": "^4.0.4",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
-    "prettier-eslint-cli": "^7.0.0",
+    "prettier-eslint-cli": "^7.1.0",
     "stylelint": "^14.11.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-config-woda": "1.0.0-8",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.2"
   },
-  "prettier": "@wwwoda/prettier-config"
+  "prettier": "@wwwoda/prettier-config",
+  "gettext": {
+    "js": {
+      "parsers": [
+        {
+          "expression": "__",
+          "arguments": {
+            "text": 0,
+            "domain": 1
+          }
+        }
+      ],
+      "glob": {
+        "pattern": "src/**/*.{ts,tsx}",
+        "options": {
+          "ignore": "src/**/*.spec.ts"
+        }
+      }
+    },
+    "headers": {
+      "Language": ""
+    },
+    "output": "languages/gutenberg-components.pot"
+  }
 }
