--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "typescript"
   ],
   "dependencies": {
-    "@kaiseki/gutenberg-hooks": "0.1.0-alpha5",
-    "@kaiseki/gutenberg-styles": "0.1.0-alpha2",
+    "@kaiseki/gutenberg-hooks": "file:.yalc/@kaiseki/gutenberg-hooks",
+    "@kaiseki/gutenberg-styles": "file:.yalc/@kaiseki/gutenberg-styles",
     "@wordpress/api-fetch": "^6.13.0",
     "@wordpress/blob": "^3.16.0",
     "@wordpress/block-editor": "^9.8.0",
