--- a/package.json
+++ b/package.json
@@ -41,27 +41,28 @@
     "typescript"
   ],
   "dependencies": {
-    "@kaiseki/gutenberg-hooks": "0.1.0-alpha5",
+    "@kaiseki/gutenberg-hooks": "0.1.0-alpha6",
     "@kaiseki/gutenberg-styles": "0.1.0-alpha2",
-    "@wordpress/api-fetch": "^6.13.0",
-    "@wordpress/blob": "^3.16.0",
-    "@wordpress/block-editor": "^9.8.0",
-    "@wordpress/components": "^20.0.0",
-    "@wordpress/compose": "^5.14.0",
-    "@wordpress/core-data": "^4.14.0",
-    "@wordpress/data": "^6.15.0",
-    "@wordpress/date": "^4.16.0",
-    "@wordpress/editor": "^12.15.0",
-    "@wordpress/element": "^4.14.0",
-    "@wordpress/i18n": "^4.16.0",
-    "@wordpress/icons": "^9.7.0",
-    "@wordpress/media-utils": "^4.7.0",
-    "@wordpress/notices": "^3.16.0",
-    "@wordpress/url": "^3.17.0",
+    "@wordpress/api-fetch": "wp-6.2",
+    "@wordpress/blob": "wp-6.2",
+    "@wordpress/block-editor": "wp-6.2",
+    "@wordpress/components": "wp-6.2",
+    "@wordpress/compose": "wp-6.2",
+    "@wordpress/core-data": "wp-6.0",
+    "@wordpress/data": "wp-6.0",
+    "@wordpress/date": "wp-6.2",
+    "@wordpress/editor": "wp-6.2",
+    "@wordpress/element": "wp-6.2",
+    "@wordpress/i18n": "wp-6.2",
+    "@wordpress/icons": "wp-6.2",
+    "@wordpress/media-utils": "wp-6.2",
+    "@wordpress/notices": "wp-6.2",
+    "@wordpress/url": "wp-6.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-select": "^5.4.0",
     "react-select-async-paginate": "^0.6.2",
     "styled-components": "^5.3.5",
@@ -72,24 +73,19 @@
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
     "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@types/classnames": "^2.3.1",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/styled-components": "^5.1.26",
-    "@types/wordpress__api-fetch": "^3.23.1",
-    "@types/wordpress__blob": "^2.8.0",
-    "@types/wordpress__block-editor": "^7.0.0",
-    "@types/wordpress__components": "^19.10.2",
-    "@types/wordpress__compose": "^4.0.1",
+    "@types/wordpress__block-editor": "^11.5.1",
+    "@types/wordpress__components": "^23.0.1",
+    "@types/wordpress__compose": "^6.0.1",
     "@types/wordpress__core-data": "^2.4.5",
-    "@types/wordpress__data": "^6.0.1",
+    "@types/wordpress__data": "^6.0.2",
     "@types/wordpress__date": "^3.3.2",
-    "@types/wordpress__editor": "^11.0.0",
-    "@types/wordpress__i18n": "^3.11.0",
-    "@types/wordpress__media-utils": "^3.0.0",
-    "@types/wordpress__notices": "^3.5.0",
-    "@types/wordpress__url": "^2.14.0",
+    "@types/wordpress__editor": "^13.6.1",
+    "@types/wordpress__media-utils": "^4.14.1",
+    "@types/wordpress__notices": "^3.27.0",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@wwwoda/prettier-config": "^2.0.1",
@@ -113,10 +109,10 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
     "prettier-eslint-cli": "^7.1.0",
-    "stylelint": "^14.11.0",
+    "stylelint": "^15.6.2",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-config-woda": "1.0.0-8",
-    "typescript": "^4.8.2"
+    "typescript": "^5.0.2"
   },
   "prettier": "@wwwoda/prettier-config",
   "gettext": {
