--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
     "start": "tsc -p tsconfig.json -w",
     "build": "del build && tsc -p tsconfig.json",
     "typecheck": "tsc -p tsconfig.json",
-    "lint": "yarn run lint:css && yarn run lint:eslint",
-    "lint:prettier": "prettier -c \"src/**/*.(ts|tsx)\"",
-    "lint:eslint": "eslint src --ext ts --ext tsx",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint src --ext ts --ext tsx",
     "lint:css": "stylelint \"./src/**/*.{ts,tsx}\"",
-    "fix": "yarn run fix:prettier && yarn run fix:css && yarn run fix:eslint",
-    "fix:prettier": "prettier --write \"src/**/*.(ts|tsx)\" --ignore-path .prettierignore",
-    "fix:eslint": "eslint --fix src --ext ts --ext tsx",
+    "fix": "npm run fix:js && npm run fix:css",
+    "fix:js": "prettier --write \"src/**/*.(ts|tsx)\" --ignore-path .prettierignore && eslint --fix src --ext ts --ext tsx",
     "fix:css": "stylelint \"./src/**/*.{ts,tsx}\" --fix",
     "i18n": "yarn gettext-extract && yarn i18n:pot-prep",
     "i18n:pot-prep": "sed \"-i\" \"\" \"-e\" 's/#: [^:]*/#: gutenberg-components.js/g' languages/gutenberg-components.pot",
     "release": "np",
-    "prepare": "yarn run build",
-    "prepublishOnly": "yarn run lint",
-    "preversion": "yarn run fix"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint",
+    "preversion": "npm run fix"
   },
   "author": {
     "name": "Kaiseki",
@@ -43,21 +41,21 @@
   "dependencies": {
     "@kaiseki/gutenberg-hooks": "0.1.0-alpha6",
     "@kaiseki/gutenberg-styles": "0.1.0-alpha2",
-    "@wordpress/api-fetch": "wp-6.2",
-    "@wordpress/blob": "wp-6.2",
-    "@wordpress/block-editor": "wp-6.2",
-    "@wordpress/components": "wp-6.2",
-    "@wordpress/compose": "wp-6.2",
+    "@wordpress/api-fetch": "wp-6.0",
+    "@wordpress/blob": "wp-6.0",
+    "@wordpress/block-editor": "wp-6.0",
+    "@wordpress/components": "wp-6.0",
+    "@wordpress/compose": "wp-6.0",
     "@wordpress/core-data": "wp-6.0",
     "@wordpress/data": "wp-6.0",
-    "@wordpress/date": "wp-6.2",
-    "@wordpress/editor": "wp-6.2",
-    "@wordpress/element": "wp-6.2",
-    "@wordpress/i18n": "wp-6.2",
-    "@wordpress/icons": "wp-6.2",
-    "@wordpress/media-utils": "wp-6.2",
-    "@wordpress/notices": "wp-6.2",
-    "@wordpress/url": "wp-6.2",
+    "@wordpress/date": "wp-6.0",
+    "@wordpress/editor": "wp-6.0",
+    "@wordpress/element": "wp-6.0",
+    "@wordpress/i18n": "wp-6.0",
+    "@wordpress/icons": "wp-6.0",
+    "@wordpress/media-utils": "wp-6.0",
+    "@wordpress/notices": "wp-6.0",
+    "@wordpress/url": "wp-6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
@@ -72,19 +70,18 @@
     "@babel/core": "^7.18.13",
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
-    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/styled-components": "^5.1.26",
-    "@types/wordpress__block-editor": "^11.5.1",
-    "@types/wordpress__components": "^23.0.1",
+    "@types/wordpress__block-editor": "^7.0.0",
+    "@types/wordpress__components": "^19.10.3",
     "@types/wordpress__compose": "^6.0.1",
     "@types/wordpress__core-data": "^2.4.5",
     "@types/wordpress__data": "^6.0.2",
     "@types/wordpress__date": "^3.3.2",
-    "@types/wordpress__editor": "^13.6.1",
-    "@types/wordpress__media-utils": "^4.14.1",
+    "@types/wordpress__editor": "^13.0.0",
+    "@types/wordpress__media-utils": "^3.0.0",
     "@types/wordpress__notices": "^3.27.0",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
@@ -106,12 +103,11 @@
     "gettext-extract": "^2.0.1",
     "np": "*",
     "postcss-scss": "^4.0.4",
+    "postcss-styled-syntax": "^0.4.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
-    "prettier-eslint-cli": "^7.1.0",
     "stylelint": "^15.6.2",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-config-woda": "1.0.0-8",
+    "stylelint-config-woda": "github:wwwoda/stylelint-config-woda#stylelint15",
     "typescript": "^5.0.2"
   },
   "prettier": "@wwwoda/prettier-config",
