--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
     "stylelint": "^15.6.2",
-    "stylelint-config-woda": "github:wwwoda/stylelint-config-woda#stylelint15",
+    "stylelint-config-woda": "1.0.0-9",
     "typescript": "^5.0.2"
   },
   "prettier": "@wwwoda/prettier-config",
