--- a/package.json
+++ b/package.json
@@ -133,5 +133,9 @@
       "Language": ""
     },
     "output": "languages/gutenberg-components.pot"
+  },
+  "resolutions": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
