--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "@types/styled-components": "^5.1.26",
     "@types/wordpress__block-editor": "^7.0.0",
     "@types/wordpress__components": "^19.10.3",
-    "@types/wordpress__compose": "^6.0.1",
     "@types/wordpress__core-data": "^2.4.5",
     "@types/wordpress__data": "^6.0.2",
     "@types/wordpress__date": "^3.3.2",
@@ -134,7 +133,7 @@
     },
     "output": "languages/gutenberg-components.pot"
   },
-  "resolutions": {
+  "overrides": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
