--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaiseki/gutenberg-components",
-  "version": "0.1.0-alpha9",
+  "version": "0.1.0-beta.0",
   "license": "MIT",
   "description": "React components for the WordPress Block Editor (Gutenberg)",
   "type": "module",
